# MLOps

./: .gitignore  .gitmodules  pyproject.toml
tutorials/docker/: README.md
tutorials/docker/experiment_docker_entrypoint_cmd/: Dockerfile
tutorials/docker/experiment_docker_mount/: Dockerfile
tutorials/docker/fastapi/: Dockerfile  README.md  pyproject.toml
tutorials/docker/nana_demo/: mongo-docker-compose_to_replace_docker-compose.yaml
tutorials/docker/node/: Dockerfile
tutorials/docker/node/src/: server.js
tutorials/fastapi/: README.md  main.py
tutorials/fastapi/aws_lambda/: lambda_handler.py
tutorials/fastapi/ec2/: main.py
tutorials/kedro/kedro_app_as_package/: README.md  docker-compose.yml
tutorials/kedro/kedro_app_as_package/backend/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml
tutorials/kedro/kedro_app_as_package/backend/conf/: logging.yml
tutorials/kedro/kedro_app_as_package/backend/src/: entrypoint.sh  helper.py  ignore_run_kedro_pipeline.py  main.py
tutorials/kedro/kedro_app_as_package/backend/src/models/: model.py
tutorials/kedro/kedro_app_as_package/frontend/: .env  .gitignore  Dockerfile  pyproject.toml
tutorials/kedro/kedro_app_as_package/frontend/src/: entrypoint.sh  main.py
tutorials/kedro/kedro_app_as_package/frontend/src/models/: model.py
tutorials/kedro/kedro_app_in_docker/: README.md
tutorials/kedro/spaceflights/: .dockerignore  pyproject.toml
tutorials/ml_flow/: pyproject.toml
tutorials/ml_flow/src/: customize_pyfunc_predict.py  experiment.py  log.py  log_custom_model.py  nested_runs.py  runs.py
(+8 files in other folders)
