[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "black>=25.9.0",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "pandantic>=1.0.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]
